--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" href="favicon.ico" />
+<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
 <title>Vital Partners Leading Dating and Introduction Agency in Sydney &amp; Canberra</title>
+<link href="css/custom.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/default.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+
 <!--<link href="css/small-resolution.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/medium-resolution.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/high-resolution.css" rel="stylesheet" type="text/css" media="all">-->
@@ -21,7 +23,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!-- bxSlider Javascript file -->
 <script src="js/jquery.bxslider.min.js"></script>
-<script src="js/script.js" type="text/javascript"></script>
+<!-- <script src="js/script.js" type="text/javascript"></script> -->
 
 <!-- bxSlider CSS file -->
 <link href="css/jquery.bxslider.css" rel="stylesheet" />
@@ -124,17 +126,20 @@
 					<li class="fileds">
 						<div class="name_fileds">
 							<label>First Name</label>
-							<input name="firstname" type="text" /> 
+							<input id="firstname"name="firstname" type="text" /> 
+							<span class="error"></span>
 						</div>
 						<div class="name_fileds">
 							<label>Last Name</label>
-							<input name="lastname" type="text" /> 
+							<input id="lastname" name="lastname" type="text" /> 
+							<span class="error"></span>
 						</div>
 					</li>
 					<li class="fileds">
 						<div class="phone_fileds">
 							<label>Phone No</label>
-							<input name="phone" type="text" /> 
+							<input id="phone_no"name="phone" type="text" /> 
+							<span class="error"></span>
 						</div>
 						<div class="phone_fileds">
 							<label>Office No</label>
@@ -144,17 +149,20 @@
 					<li class="fileds">
 						<div class="email_fileds">
 							<label>Email</label>
-							<input name="email" type="text" /> 
+							<input id="email" name="email" type="text" /> 
+							<span class="error"></span>
 						</div>
 						<div class="pass_fileds">
 							<label>Password</label>
-							<input name="password" type="text" /> 
+							<input id="pwd"name="password" type="text" /> 
+							<span class="error"></span>
 						</div>
 					</li>
 					<li class="fileds">
 						<div class="pass_fileds">
 							<label>Confirm Password</label>
-							<input name="password" type="text" /> 
+							<input id="confirm_pwd" name="password" type="text" /> 
+							<span class="error"></span>
 						</div>
 							<div class="dob_fileds selectbox">
 								<label>My birthdate is</label>
@@ -250,9 +258,9 @@
 						</div>						
 					</li>
 				</ul>
-				<div class="next_btn_block">
+				<div class="next_btn_block" id="submit">
 					<div class="next_btn">
-						<a href="partners_preference_form.html">Proceed to Step 2 <span><img src="images/small_triangle.png" alt="small_triangle"> </span></a>
+						<a href="javascript:;">Proceed to Step 2 <span><img src="images/small_triangle.png" alt="small_triangle"> </span></a>
 					</div>
 				</div>
 			</div>
@@ -423,11 +431,11 @@ Live a life without regrets and take action today!</p>
    Sticky Contact Number End-->
 
 </div>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	$(document).ready(function(){
 	  $('.bxslider').bxSlider();
 	});
-</script>
+</script> -->
 <!--wrapper-starts-->
 
 <script type="text/javascript" src="js/jquery.js"></script>	
@@ -443,5 +451,6 @@ Live a life without regrets and take action today!</p>
 		});
 	});
 </script>
+<script src="js/js_validation.js"></script>
 </body>
 </html>
