--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
 					<li class="fileds">
 						<div class="name_fileds">
 							<label>First Name</label>
-							<input id="firstname"name="firstname" type="text" /> 
+							<input id="firstname" name="firstname"onblur="validateFirstName()"type="text" /> 
 							<span class="error"></span>
 						</div>
 						<div class="name_fileds">
 							<label>Last Name</label>
-							<input id="lastname" name="lastname" type="text" /> 
+							<input id="lastname" name="lastname"onblur="validateLastName()"type="text" /> 
 							<span class="error"></span>
 						</div>
 					</li>
 					<li class="fileds">
 						<div class="phone_fileds">
 							<label>Phone No</label>
-							<input id="phone_no"name="phone" type="text" /> 
+							<input id="phone_no"name="phone"onblur="validatePhoneNo()"type="text" /> 
 							<span class="error"></span>
 						</div>
 						<div class="phone_fileds">
@@ -149,43 +149,31 @@
 					<li class="fileds">
 						<div class="email_fileds">
 							<label>Email</label>
-							<input id="email" name="email" type="text" /> 
+							<input id="email" name="email"onblur="validateEmail()"type="text" /> 
 							<span class="error"></span>
 						</div>
 						<div class="pass_fileds">
 							<label>Password</label>
-							<input id="pwd"name="password" type="text" /> 
+							<input id="pwd"name="password"onblur=" validatePassword()"type="password" /> 
 							<span class="error"></span>
 						</div>
 					</li>
 					<li class="fileds">
 						<div class="pass_fileds">
 							<label>Confirm Password</label>
-							<input id="confirm_pwd" name="password" type="text" /> 
+							<input id="confirm_pwd" name="password"onblur=" validateConfirmPwd()" type="password" /> 
 							<span class="error"></span>
 						</div>
 							<div class="dob_fileds selectbox">
-								<label>My birthdate is</label>
-
+								<label >My birthdate is</label>
+								<span id="day_error" class="error"></span>
+							    <span id="month_error" class="error"></span>
+								<span id="year_error" class="error"></span>
+								
 								<ul>
-									<li>
-										<select name="month" class="select month">
-											<option value="jan">Jan</option>
-											<option value="feb">Feb</option>
-											<option value="march">March</option>
-											<option value="april">April</option>
-											<option value="may">May</option>
-											<option value="june">June</option>
-											<option value="july">July</option>
-											<option value="aug">Aug</option>
-											<option value="sep">Sep</option>
-											<option value="oct">Oct</option>
-											<option value="nov">Nov</option>
-											<option value="dec">Dec</option>
-										</select>
-									</li>
-									<li>
-										<select name="day" class="select day">
+							     	<li>
+										<select id="day"name="day" class="select day" onchange="getBirthDate()"onblur="validateDay()">
+											<option value="Select Day">Select Day</option>
 											<option value="1">01</option>
 											<option value="2">02</option>
 											<option value="3">03</option>
@@ -223,8 +211,97 @@
 									</li>
 
 									<li>
-										<select name="year" class="select year">
-											<option value="volvo">Year</option>
+										<select id="month" name="month" class="select month" onchange="getBirthDate()"onblur="validateMonth()">
+											<option value="Select Month">Select Month</option>
+											<option value="1">Jan</option>
+											<option value="2">Feb</option>
+											<option value="3">March</option>
+											<option value="4">April</option>
+											<option value="5">May</option>
+											<option value="6">June</option>
+											<option value="7">July</option>
+											<option value="8">Aug</option>
+											<option value="9">Sep</option>
+											<option value="10">Oct</option>
+											<option value="11">Nov</option>
+											<option value="12">Dec</option>
+										</select>
+									</li>
+
+									<li>
+										<select id="year" name="year" class="select year" onchange="getBirthDate()"onblur="validateYear()">
+											<option value="Select Year">Select Year</option>
+											<option value="2020">2020</option>
+											<option value="2019">2019</option>
+											<option value="2018">2018</option>
+											<option value="2017">2017</option>
+											<option value="2016">2016</option>
+											<option value="2015">2015</option>
+											<option value="2014">2014</option>
+											<option value="2013">2013</option>
+											<option value="2012">2012</option>
+											<option value="2011">2011</option>
+											<option value="2010">2010</option>
+											<option value="2009">2009</option>
+											<option value="2008">2008</option>
+											<option value="2007">2007</option>
+											<option value="2006">2006</option>
+											<option value="2005">2005</option>
+											<option value="2004">2004</option>
+											<option value="2003">2003</option>
+											<option value="2002">2002</option>
+											<option value="2001">2001</option>
+											<option value="2000">2000</option>
+											<option value="1999">1999</option>
+											<option value="1998">1998</option>
+											<option value="1997">1997</option>
+											<option value="1996">1996</option>
+											<option value="1995">1995</option>
+											<option value="1994">1994</option>
+											<option value="1993">1993</option>
+											<option value="1992">1992</option>
+											<option value="1991">1991</option>
+											<option value="1990">1990</option>
+											<option value="1989">1989</option>
+											<option value="1988">1988</option>
+											<option value="1987">1987</option>
+											<option value="1986">1986</option>
+											<option value="1985">1985</option>
+											<option value="1984">1984</option>
+											<option value="1983">1983</option>
+											<option value="1982">1982</option>
+											<option value="1981">1981</option>
+											<option value="1980">1980</option>
+											<option value="1979">1979</option>
+											<option value="1978">1978</option>
+											<option value="1977">1977</option>
+											<option value="1976">1976</option>
+											<option value="1975">1975</option>
+											<option value="1974">1974</option>
+											<option value="1973">1973</option>
+											<option value="1972">1972</option>
+											<option value="1971">1971</option>
+											<option value="1970">1970</option>
+											<option value="1969">1969</option>
+											<option value="1968">1968</option>
+											<option value="1967">1967</option>
+											<option value="1966">1966</option>
+											<option value="1965">1965</option>
+											<option value="1964">1964</option>
+											<option value="1963">1963</option>
+											<option value="1962">1962</option>
+											<option value="1961">1961</option>
+											<option value="1960">1960</option>
+											<option value="1959">1959</option>
+											<option value="1958">1958</option>
+											<option value="1957">1957</option>
+											<option value="1956">1956</option>
+											<option value="1955">1955</option>
+											<option value="1954">1954</option>
+											<option value="1953">1953</option>
+											<option value="1952">1952</option>
+											<option value="1951">1951</option>
+											<option value="1950">1950</option>
 										</select>
 									</li>
 								</ul>
@@ -233,28 +310,31 @@
 					<li class="fileds">
 						<div class="age_fileds">
 							<label>Age</label>
-							<input name="age" type="text" /> 
+							<input disabled id="age" name="age" type="text" value="age"read only /> 
 						</div>
 						<div class="gender_fileds">
 							<label>Gender</label>
+							<span id="gender_error" class="error"></span>
 							<ul>
-								<li><input type="radio" class="radio" id="residence1" name="radio" /><label class="radio-label" for="residence1">Male</label></li>
-								<li><input type="radio" class="radio" id="residence2" name="radio" /><label class="radio-label" for="residence2">Female</label></li>
+								<li><input type="radio" name="gender[]" class="radio" id="residence1" name="radio" /><label class="radio-label" for="residence1">Male</label></li>
+								<li><input type="radio" name="gender[]" class="radio" id="residence2" name="radio" /><label class="radio-label" for="residence2">Female</label></li>
 							</ul>	
 						</div>
 					</li>
 					<li>
 						<div class="interest_fileds">
 						<label>Interest</label>
-							<ul>
-								<li><input type="checkbox" class="checkbox" id="checkbox_sample18" /> <label class="css-label" for="checkbox_sample18">Biking</label></li>
-								<li><input type="checkbox" class="checkbox" id="checkbox_sample19" /> <label class="css-label" for="checkbox_sample19">Reading</label></li>
-								<li><input type="checkbox" class="checkbox" id="checkbox_sample20" /> <label class="css-label" for="checkbox_sample20">Playing</label></li>
+						<span id="interest_error" class="error"></span>
+							<ul> 	
+								<li><input type="checkbox" name="interest[]" class="checkbox" id="checkbox_sample18" /> <label class="css-label" for="checkbox_sample18">Biking</label></li>
+								<li><input type="checkbox" name="interest[]" class="checkbox" id="checkbox_sample19" /> <label class="css-label" for="checkbox_sample19">Reading</label></li>
+								<li><input type="checkbox" name="interest[]" class="checkbox" id="checkbox_sample20" /> <label class="css-label" for="checkbox_sample20">Playing</label></li>
 							</ul>
 						</div>
 						<div class="about_you_fileds">
 						<label>About you</label>
-						<textarea></textarea>
+						<textarea id="comment" onblur="checkLength()"></textarea>
+						<span class="error"></span>
 						</div>						
 					</li>
 				</ul>
